
	* term/cgm.trm (CGM_options) term/gd.trm (PNG_options) 
	term/metapost.trm (MP_options) term/tgif.trm (TGIF_options):
	The "set termoption font <foo>" command was intended to allow changing
	only font size, leaving the current font face intact, using the form
		set term <foo> font ",<newsize>"
	Some terminals were not handling this correctly.

2007-01-11  Daniel Sebald  <daniel.sebald@ieee.org>

	* docs/gnuplot.texi docs/gnuplot.doc (line 3521):   Add trailing
	whitespace at end of line "^6 origin".  For unknown reasons this works
	around a problem with makeinfo. FIXME.

2007-01-10  Daniel Sebald  <daniel.sebald@ieee.org>

	* term/pdf.trm (PDF_SetFont):  Catch error from font request, and fall
	back to guaranteed font "Times-Roman".  Makes font errors non-fatal.

2007-01-10  Ethan Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c (PaletteSetColor): Update current color in 
	plot->current_rgb when setting color from a Palette. Bugfix.

2007-01-09  Daniel Sebald  <daniel.sebald@ieee.org>

	* demo/borders.dem: Add a "pause -1" at the end

2007-01-07  Mike Sutton  <mws116@usa.com>

	* docs/gnuplot.doc: Update descriptions of <colorspec> as used in
	`set title` and `set label`.

2007-01-07  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_init PNG_init_brush PNG_vector PNG_point):
	Instead of pre-initializing a fixed number of brushes (PNG_brush[]),
	make this an array of pointers and allocated/initialize brushes on
	demand. This allows us to increase the maximum line width with very
	little cost in pre-allocated space.  Up MAXLINEWIDTH from 12 to 100.
	Also increase optimization of brush coloring by making it conditional
	on an actual change in color since the last use.

2007-01-04  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm: Add error return check everywhere gdImageCreate is
	called.  This was not a useful check in earlier versions of libgd, but
	apparently 2.0.34 will introduce serious sanity checking at the time of