@@ -1,5 +1,5 @@
 /* Hello, Emacs, this is -*-C-*-
- * $Id: x11.trm,v 1.163 2006/12/27 21:40:29 sfeam Exp $
+ * $Id: x11.trm,v 1.164 2007/01/14 05:34:29 sfeam Exp $
  *
  */
 
@@ -2112,6 +2112,8 @@ START_HELP(x11)
 " The <size>, <slant>, and <weight> specifications are all optional.",
 " If you do not specify <slant> or <weight> then you will get whatever font ",
 " variant the font server offers first.",
+" You may set a default enconding via the corresponding X11 resource. E.g.",
+"       gnuplot*encoding: iso8859-15",
 " The driver also recognizes some common PostScript font names and",
 " replaces them with possible X11 or TrueType equivalents.",
 " This same sequence is used to process font requests from `set label`.",
